<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medications"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_medications" />
        <item
            android:id="@+id/nav_today"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_today" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_history" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>